--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:background="?android:colorBackground">
 
         <!-- Top bar -->
@@ -11,8 +12,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
-            app:layout_constraintTop_toTopOf="parent">
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
 
                 <com.google.android.material.appbar.MaterialToolbar
                     android:id="@+id/toolBar"
@@ -35,60 +35,81 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <!-- Featured item -->
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="match_parent"
             android:layout_height="250dp"
-            android:layout_marginHorizontal="4dp"
-            android:scaleType="fitCenter"
-            app:layout_constraintTop_toBottomOf="@id/appBarLayout" />
+            android:layout_margin="4dp"
+            android:scaleType="fitCenter" />
+
+
+        <!-- Featured item -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+                <com.google.android.material.textview.MaterialTextView
+                    android:id="@+id/item_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Historical Object"
+                    android:layout_weight="1"
+
+                    android:textColor="?attr/colorOnBackground"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/audioImage"
+                    style="@style/Widget.MaterialComponents.Button.Icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:padding="12dp"
+                    android:textAlignment="viewStart"
+                    app:icon="@drawable/ic_play"
+                    app:iconGravity="textStart"
+                    app:iconPadding="0dp"
+                    app:iconSize="36dp"
+                    app:iconTint="?attr/colorOnBackground"
+                    tools:ignore="SpeakableTextPresentCheck" />
+
+        </LinearLayout>
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/item_title"
-            android:layout_width="0dp"
+            android:id="@+id/upload_info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="Historical Object"
+            android:text="Uploaded by user on 12/05/2023"
             android:textColor="?attr/colorOnBackground"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/audioImage"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/item_image" />
+            android:textSize="12sp" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/audioImage"
-            style="@style/Widget.MaterialComponents.Button.Icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:insetTop="0dp"
-            android:insetBottom="0dp"
-            android:padding="12dp"
-            app:icon="@drawable/ic_play"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="36dp"
-            app:iconTint="?attr/colorOnBackground"
-            app:layout_constraintBottom_toBottomOf="@+id/item_title"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/item_title"
-            app:layout_constraintVertical_bias="0.0"
-            tools:ignore="SpeakableTextPresentCheck" />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
+
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/item_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="32dp"
             android:text="Historical Description"
             android:textColor="?attr/colorOnBackground"
-            android:textSize="14sp"
-            app:layout_constraintTop_toBottomOf="@+id/item_image"
-            tools:layout_editor_absoluteX="13dp" />
+            android:textSize="14sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
+</LinearLayout>
+
 
