--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,29 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="?android:colorBackground">
+    android:layout_height="match_parent">
 
-        <!-- Top bar -->
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appBarLayout"
+            android:id="@+id/app_bar_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar">
+            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
+            android:fitsSystemWindows="true">
 
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolBar"
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="?attr/colorPrimary"
-                    app:menu="@menu/main_top_bar"
-                    app:navigationIcon="@drawable/ic_close_24px"
-                    app:navigationIconTint="?attr/colorOnPrimary"
-                    app:title="@string/item_details"
-                    app:titleTextColor="?attr/colorOnPrimary" />
+                    android:layout_height="match_parent"
+                    android:fitsSystemWindows="true"
+                    app:contentScrim="?attr/colorPrimary"
+                    app:expandedTitleMarginEnd="64dp"
+                    app:expandedTitleMarginStart="48dp"
+                    app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+                        <ImageView
+                            android:id="@+id/image"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:fitsSystemWindows="true"
+                            android:scaleType="centerCrop"
+                            app:layout_collapseMode="parallax" />
+
+                        <com.google.android.material.appbar.MaterialToolbar
+                            android:id="@+id/toolbar"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            app:navigationIcon="@drawable/ic_close_24px"
+                            app:layout_collapseMode="pin"
+                            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
 
                 <com.google.android.material.progressindicator.LinearProgressIndicator
                     android:id="@+id/progress_indicator"
@@ -35,91 +50,73 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <LinearLayout
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="8dp"
-            android:orientation="vertical">
+            android:clipToPadding="false"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                <ImageView
-                    android:id="@+id/item_image"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:scaleType="fitCenter" />
+                    android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:gravity="center_vertical"
-                            android:orientation="vertical">
-
-                                <com.google.android.material.textview.MaterialTextView
-                                    android:id="@+id/item_title"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-
-                                    android:text="Historical Object"
-                                    android:textColor="?attr/colorOnBackground"
-                                    android:textSize="20sp"
-                                    android:textStyle="bold" />
-
-                                <com.google.android.material.textview.MaterialTextView
-                                    android:id="@+id/upload_info"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:text="Uploaded by user on 12/05/2023"
-                                    android:textColor="?attr/colorOnBackground"
-                                    android:textSize="12sp" />
-                        </LinearLayout>
-
-                        <com.google.android.material.button.MaterialButton
-                            android:id="@+id/audioImage"
-                            style="@style/Widget.MaterialComponents.Button.Icon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:insetTop="0dp"
-                            android:insetBottom="0dp"
-                            android:padding="12dp"
-                            android:textAlignment="viewStart"
-                            app:icon="@drawable/ic_play"
-                            app:iconGravity="textStart"
-                            app:iconPadding="0dp"
-                            app:iconSize="36dp"
-                            app:iconTint="?attr/colorOnBackground"
-                            tools:ignore="SpeakableTextPresentCheck" />
-
-                </LinearLayout>
-
-                <ScrollView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:paddingTop="16dp">
-
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/item_description"
+                        <com.google.android.material.card.MaterialCardView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:justificationMode="inter_word"
-                            android:text="Historical Description"
-                            android:textColor="?attr/colorOnBackground"
-                            android:textSize="14sp" />
+                            android:layout_marginTop="24dp"
+                            app:cardElevation="@dimen/spacing_medium"
+                            app:cardUseCompatPadding="true"
+                            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-                </ScrollView>
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="vertical">
 
-        </LinearLayout>
+                                        <TextView
+                                            android:id="@+id/title"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginStart="@dimen/spacing_large"
+                                            android:layout_marginEnd="@dimen/spacing_large"
+                                            android:layout_marginTop="@dimen/spacing_large"
+                                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
 
+                                        <TextView
+                                            android:id="@+id/description"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_margin="@dimen/spacing_large"
+                                            android:text="@string/lorem_ipsum"
+                                            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
 
-        <!-- Featured item -->
+                                        <TextView
+                                            android:id="@+id/upload_info"
+                                            android:layout_width="match_parent"
+                                            android:layout_height="wrap_content"
+                                            android:layout_marginStart="@dimen/spacing_large"
+                                            android:layout_marginTop="@dimen/spacing_xsmall"
+                                            android:layout_marginEnd="@dimen/spacing_large"
+                                            android:layout_marginBottom="@dimen/spacing_large" />
 
+                                </LinearLayout>
 
-</LinearLayout>
+                        </com.google.android.material.card.MaterialCardView>
+                </FrameLayout>
+        </androidx.core.widget.NestedScrollView>
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/spacing_large"
+            android:src="@drawable/ic_play"
+            app:borderWidth="0dp"
+            app:elevation="6dp"
+            app:pressedTranslationZ="12dp"
+            app:rippleColor="@android:color/white"
 
+            app:layout_anchor="@id/app_bar_layout"
+            app:layout_anchorGravity="bottom|right|end" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
