--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -36,7 +36,25 @@
                             android:layout_height="?attr/actionBarSize"
                             app:navigationIcon="@drawable/ic_close_24px"
                             app:layout_collapseMode="pin"
-                            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
+                            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" >
+
+                                <LinearLayout
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:gravity="end"
+                                    android:orientation="horizontal">
+
+                                        <ImageButton
+                                            android:id="@+id/bookmarksButton"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="match_parent"
+                                            android:layout_marginTop="2dp"
+                                            android:layout_marginEnd="16dp"
+                                            android:background="?attr/selectableItemBackgroundBorderless"
+                                            android:src="@drawable/ic_heart_24px" />
+                                </LinearLayout>
+
+                        </com.google.android.material.appbar.MaterialToolbar>
 
                 </com.google.android.material.appbar.CollapsingToolbarLayout>
 
