--- a/app/src/main/res/layout/item_layout_wide.xml
+++ b/app/src/main/res/layout/item_layout_wide.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical"
-    android:padding="8dp">
+    android:layout_marginBottom="8dp"
+    android:padding="8dp"
+    app:cardElevation="4dp">
 
-    <ImageView
-        android:id="@+id/featured_item_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:scaleType="centerCrop"
-        tools:srcCompat="@drawable/ic_imacg3_background" />
-
-    <TextView
-        android:id="@+id/item_title"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Historical Object"
-        android:textAlignment="center"
-        android:textColor="?attr/colorOnBackground"
-        android:textSize="34sp"
-        tools:text="Item Name" />
+        android:padding="8dp">
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/featured_item_image"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@drawable/ic_imacg3_background" />
+
+        <TextView
+            android:id="@+id/item_title"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:text="Historical Object"
+            android:textAlignment="center"
+            android:textColor="?attr/colorOnBackground"
+            android:textSize="34sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/featured_item_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Item Name" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.google.android.material.card.MaterialCardView>
