--- a/app/src/main/res/layout/item_layout_wide.xml
+++ b/app/src/main/res/layout/item_layout_wide.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="8dp"
+    android:layout_marginHorizontal="8dp"
+    android:layout_marginTop="8dp"
     android:padding="8dp"
     app:cardElevation="4dp">
 
@@ -31,7 +32,7 @@
             android:text="Historical Object"
             android:textAlignment="center"
             android:textColor="?attr/colorOnBackground"
-            android:textSize="34sp"
+            android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/featured_item_image"
