--- a/app/src/main/res/menu/main_top_bar.xml
+++ b/app/src/main/res/menu/main_top_bar.xml
@@ -1,9 +1,9 @@
+<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item
-        android:id="@+id/bookmark"
-        android:icon="@drawable/ic_bookmark"
-        android:title="@string/favourite"
-        android:contentDescription="@string/item_description_bookmark"
-        app:showAsAction="ifRoom" />
+xmlns:app="http://schemas.android.com/apk/res-auto">
+<item
+    android:id="@+id/bookmarksButton"
+    android:icon="@drawable/ic_heart_24px"
+    android:title="Bookmark"
+    app:showAsAction="always" />
 </menu>
