--- a/app/src/main/res/layout/item_layout.xml
+++ b/app/src/main/res/layout/item_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginStart="8dp"
+    android:layout_marginHorizontal="4dp"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -17,9 +17,9 @@
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="8dp"
         android:text="Historical Object"
         android:textColor="?attr/colorOnSecondary"
-        android:layout_marginVertical="16dp"
         android:textSize="14sp" />
 
 </LinearLayout>
