not showing viewed items

--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -2,7 +2,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/md_theme_dark_background">
 
     <EditText
         android:id="@+id/emailEditText"
@@ -11,6 +12,7 @@
         android:layout_margin="16dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
+        android:backgroundTint="@color/md_theme_dark_onBackground"
         android:textColorHint="@color/md_theme_dark_onBackground"
         android:textColor="@color/md_theme_dark_onBackground" />
 
@@ -22,6 +24,7 @@
         android:layout_margin="16dp"
         android:hint="Password"
         android:inputType="textPassword"
+        android:backgroundTint="@color/md_theme_dark_onBackground"
         android:textColorHint="@color/md_theme_dark_onBackground"
         android:textColor="@color/md_theme_dark_onBackground" />
 
@@ -33,6 +36,7 @@
         android:layout_margin="16dp"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:backgroundTint="@color/md_theme_dark_onBackground"
         android:textColorHint="@color/md_theme_dark_onBackground"
         android:textColor="@color/md_theme_dark_onBackground" />
 
@@ -43,6 +47,8 @@
         android:layout_below="@id/confirmPasswordEditText"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
-        android:text="Create Account" />
+        android:backgroundTint="@color/md_theme_dark_primary"
+        android:text="Create Account"
+        android:textColor="@color/md_theme_dark_onPrimary" />
 
 </RelativeLayout>
