--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -21,8 +21,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/spacing_large"
-        android:src="@drawable/ic_add"
         android:contentDescription="@string/create_blog_post"
+        android:src="@drawable/ic_add"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="24dp"
