--- a/app/src/main/res/layout/activity_blog_post_detail.xml
+++ b/app/src/main/res/layout/activity_blog_post_detail.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/md_theme_light_background"
-    android:padding="16dp">
+    android:background="@color/md_theme_light_background">
 
     <TextView
         android:id="@+id/blog_post_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
         android:text="Blog Post Title"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/md_theme_dark_scrim"
@@ -21,6 +22,7 @@
         android:id="@+id/blog_post_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingStart="16dp"
         android:text="Timestamp"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,10 +32,10 @@
         android:id="@+id/blog_post_scroll_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/blog_post_timestamp"
         app:layout_constraintBottom_toTopOf="@id/add_comment_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/blog_post_timestamp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,8 +46,10 @@
                 android:id="@+id/blog_post_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Blog Post Content"
-                android:layout_marginTop="16dp" />
+                android:layout_marginTop="16dp"
+                android:paddingHorizontal="16dp"
+                android:paddingBottom="16dp"
+                android:text="Blog Post Content" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/comments_recycler_view"
